aws-vm/sg.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description:
  "Creates a security group"
Parameters:
  Name: 
    Type: String
    Description: Name of the security group
  AddressSpace:
    Type: String
    Description: Address space for the security group rules
  VpcId:
    Type: String
    Description: ID of the VPC network
Resources:
  securityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName:
        Ref: Name
      GroupDescription: Default security group rules
      VpcId:
        Ref: VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp:
            Ref: AddressSpace
        - IpProtocol: udp
          FromPort: 0
          ToPort: 65535
          CidrIp:
            Ref: AddressSpace
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5986
          ToPort: 5986
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp:
            Ref: AddressSpace
        - IpProtocol: udp
          FromPort: 0
          ToPort: 65535
          CidrIp:
            Ref: AddressSpace
      Tags:
        - Key: Name
          Value:
            Ref: Name
Outputs:
  id:
    Description: id of the security group
    Value:
      Ref: securityGroup
